webserverからnginxに名称を変更

--- a/10_ruby-webserver.yml
+++ b/10_ruby-webserver.yml
@@ -14,7 +14,7 @@
   become: yes
   connection: local
   roles:
-    - webserver
+    - nginx
 
 - name: システムユーザにrubyと周辺環境をインストールする
   hosts: localhost
