--- a/99_vagrant.yml
+++ b/99_vagrant.yml
@@ -1,4 +1,22 @@
 # 実行するプレイブックを指定。
+- name: サーバの共通項目を実行する
+  hosts: localhost
+  vars_files:
+    - vars/main.yml
+  become: yes
+  connection: local
+  roles:
+    - common
+
+- name: vagrantユーザにphpenvをインストールする
+  hosts: localhost
+  vars_files:
+    - vars/vagrant.yml
+  become: yes
+  become_user: "{{ user_name }}"
+  connection: local
+  roles:
+    - php
 
 - name: vagrantユーザにrbenvをインストールする
   hosts: localhost
