phpenvの導入。ファイルの名称も一部変更。

--- a/roles/php/tasks/phpenv-install.yml
+++ b/roles/php/tasks/phpenv-install.yml
@@ -2,6 +2,7 @@
   yum: name="{{ item }}" state=latest
   with_items:
     - gcc
+    - gcc-c++
     - libxml2-devel
     - libcurl-devel
     - libpng-devel
