--- a/02_php-site.yml
+++ b/02_php-site.yml
@@ -1,6 +1,7 @@
 # 対象のサーバ群を記述
 
-- import_playbook: 11_php-webserver.yml
+- import_playbook: 90_common.yml
+- import_playbook: 20_php-webserver.yml
 #- import_playbook: 20_dbserver.yml
 
 # Tips
