--- a/10_ruby-webserver.yml
+++ b/10_ruby-webserver.yml
@@ -1,20 +1,20 @@
 # 実行するプレイブックを指定。
 
-- name: サーバの共通項目を実行する
-  hosts: localhost
-  vars_files:
-    - vars/main.yml
-  become: yes
-  connection: local
-  roles:
-    - common
-
 - name: webserverのミドルウェアをインストールする
   hosts: localhost
   become: yes
   connection: local
   roles:
     - nginx
+
+- name: システムユーザを作成する
+  hosts: localhost
+  vars_files:
+    - vars/main.yml
+  become: yes
+  connection: local
+  roles:
+    - sysuser
 
 - name: システムユーザにrubyと周辺環境をインストールする
   hosts: localhost
