--- a/99_vagrant.yml
+++ b/99_vagrant.yml
@@ -8,7 +8,7 @@
   become_user: "{{ user_name }}"
   connection: local
   roles:
-    - php
+    - phpenv
 
 - name: vagrantユーザにrbenvをインストールする
   hosts: localhost
@@ -18,4 +18,4 @@
   become_user: "{{ user_name }}"
   connection: local
   roles:
-    - ruby
+    - rbenv
