rubyはシステム全体にインストールすることとした。

--- a/10_ruby-webserver.yml
+++ b/10_ruby-webserver.yml
@@ -16,22 +16,9 @@
   roles:
     - sysuser
 
-- name: システムユーザにrubyと周辺環境をインストールする
+- name: サーバにrubyと周辺環境をインストールする
   hosts: localhost
-  vars_files:
-    - vars/main.yml
   become: yes
-  become_user: "{{ production_system_user }}"
   connection: local
   roles:
-    - rbenv
-
-- name: システムユーザにrubyと周辺環境をインストールする
-  hosts: localhost
-  vars_files:
-    - vars/main.yml
-  become: yes
-  become_user: "{{ staging_system_user }}"
-  connection: local
-  roles:
-    - rbenv
+    - ruby
