--- a/roles/php/tasks/php.yml
+++ b/roles/php/tasks/php.yml
@@ -9,6 +9,7 @@
   become: yes
   with_items:
     - rh-{{ php_version }}
+    - rh-{{ php_version }}-php
     - rh-{{ php_version }}-php-devel
     - rh-{{ php_version }}-php-mbstring
     - rh-{{ php_version }}-php-pdo
