--- a/01_php-site.yml
+++ b/01_php-site.yml
@@ -1,10 +1,11 @@
 # 対象のサーバ群を記述
 
 - import_playbook: 90_common.yml
-- import_playbook: 10_ruby-webserver.yml
+- import_playbook: 10_php.yml
+- import_playbook: 20_apache.yml
 #- import_playbook: 20_dbserver.yml
 
 # Tips
 # 全ての起点となるファイル
-# sudo ansible-playbook 01_ruby-site.yml
+# sudo ansible-playbook 01_php-site.yml
 # 以上のコマンドでansibleを実行する。
