add_sysuserの処理を分けた。

--- a/03_python-site.yml
+++ b/03_python-site.yml
@@ -1,6 +1,7 @@
 # 対象のサーバ群を記述
 
 - import_playbook: 90_common.yml
+- import_playbook: 91_add_sysuser.yml
 - import_playbook: 12_python.yml
 #- import_playbook: 20_apache.yml
 #- import_playbook: 21_nginx.yml
