--- a/02_ruby-site.yml
+++ b/02_ruby-site.yml
@@ -1,6 +1,7 @@
 # 対象のサーバ群を記述
 
 - import_playbook: 90_common.yml
+- import_playbook: 91_add_sysuser.yml
 - import_playbook: 11_ruby.yml
 - import_playbook: 21_nginx.yml
 #- import_playbook: 20_dbserver.yml
