システムユーザの変数を外に出した。ansibleのバージョンのパスを書けるようにした。

--- a/91_add_sysuser.yml
+++ b/91_add_sysuser.yml
@@ -3,7 +3,7 @@
 - name: システムユーザを作成する
   hosts: localhost
   vars_files:
-    - vars/main.yml
+    - vars/sys-user-name.yml
   become: yes
   connection: local
   roles:
