--- a/90_common.yml
+++ b/90_common.yml
@@ -2,9 +2,9 @@
 
 - name: サーバの共通項目を実行する
   hosts: localhost
-  vars_files:
-    - vars/main.yml
   become: yes
+  vars_files:
+    - vars/ansible-python-path.yml
   connection: local
   roles:
     - common
