python-pathは通常不要なので、コメントアウトした。

--- a/90_common.yml
+++ b/90_common.yml
@@ -3,8 +3,8 @@
 - name: サーバの共通項目を実行する
   hosts: localhost
   become: yes
-  vars_files:
-    - vars/ansible-python-path.yml
+#  vars_files:
+#    - vars/ansible-python-path.yml
   connection: local
   roles:
     - common
