汎用サーバ用のstandardを追加した

--- a/99_vagrant.yml
+++ b/99_vagrant.yml
@@ -1,14 +1,14 @@
 # 実行するプレイブックを指定。
 
-- name: vagrantユーザにphpenvをインストールする
-  hosts: localhost
-  vars_files:
-    - vars/vagrant.yml
-  become: yes
-  become_user: "{{ user_name }}"
-  connection: local
-  roles:
-    - phpenv
+# - name: vagrantユーザにphpenvをインストールする
+#   hosts: localhost
+#   vars_files:
+#     - vars/vagrant.yml
+#   become: yes
+#   become_user: "{{ user_name }}"
+#   connection: local
+#   roles:
+#     - phpenv
 
 - name: vagrantユーザにrbenvをインストールする
   hosts: localhost
@@ -50,12 +50,12 @@
   roles:
     - goenv
 
-- name: vagrantユーザにdockerとdocker-composeをインストールする
-  hosts: localhost
-  vars_files:
-    - vars/vagrant.yml
-  become: yes
-  become_user: root
-  connection: local
-  roles:
-    - docker
+# - name: vagrantユーザにdockerとdocker-composeをインストールする
+#   hosts: localhost
+#   vars_files:
+#     - vars/vagrant.yml
+#   become: yes
+#   become_user: root
+#   connection: local
+#   roles:
+#     - docker
